--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "",
   "main": "dist/app.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p",
     "start": "webpack-dev-server --devtool source-map --progress --colors --hot --inline --content-base=dist"
   },
   "dependencies": {
@@ -19,14 +19,19 @@
     "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.22.0",
     "dotenv": "^1.2.0",
+    "expose-loader": "^0.7.1",
     "file-loader": "^0.8.4",
     "history": "^1.13.1",
+    "html-loader": "^0.4.0",
+    "imports-loader": "^0.6.5",
     "path": "^0.12.7",
     "postcss-loader": "^0.8.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.0",
     "sass-loader": "^3.1.1",
+    "script-loader": "^0.6.1",
+    "scriptjs": "^2.5.8",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
