--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack -p",
+    "build:bookmarklet": "webpack --config webpack.bookmarklet.config.js",
     "start": "webpack-dev-server --devtool source-map --progress --colors --hot --inline --content-base=dist"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "css-loader": "^0.22.0",
     "dotenv": "^1.2.0",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "history": "^1.13.1",
     "html-loader": "^0.4.0",
@@ -34,6 +36,7 @@
     "script-loader": "^0.6.1",
     "scriptjs": "^2.5.8",
     "style-loader": "^0.13.0",
+    "to-string-loader": "^1.1.3",
     "ua-parser-js": "^0.7.10",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
