--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "dist/app.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p",
-    "build:bookmarklet": "webpack --config webpack.bookmarklet.config.js",
+    "build": "BUILD=1 webpack -p",
     "start": "webpack-dev-server --devtool source-map --progress --colors --hot --inline --content-base=dist"
   },
   "dependencies": {
@@ -22,7 +21,6 @@
     "css-loader": "^0.22.0",
     "dotenv": "^1.2.0",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "history": "^1.13.1",
     "html-loader": "^0.4.0",
