--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "dist/app.js",
   "license": "MIT",
   "scripts": {
-    "build": "BUILD=1 webpack -p",
+    "build": "BUILD=1 webpack -p && rm dist/*.html.js",
     "start": "webpack-dev-server --devtool source-map --progress --colors --hot --inline --content-base=dist"
   },
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.1.20",
     "babel-loader": "^6.1.0",
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "bower-webpack-plugin": "^0.1.9",
+    "browser-sync": "^2.11.1",
     "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.22.0",
     "dotenv": "^1.2.0",
@@ -25,10 +26,12 @@
     "history": "^1.13.1",
     "html-loader": "^0.4.0",
     "imports-loader": "^0.6.5",
+    "node-sass": "^3.4.2",
     "path": "^0.12.7",
     "postcss-loader": "^0.8.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.0",
     "sass-loader": "^3.1.1",
     "script-loader": "^0.6.1",
