Add debug build script to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "BUILD=1 webpack -p && rm dist/*.html.js",
+    "build:debug": "webpack && rm dist/*.html.js",
     "start": "webpack-dev-server --devtool source-map --progress --colors --hot --inline --content-base=dist"
   },
   "devDependencies": {
